--- a/Osham/html/profileEdit.html
+++ b/Osham/html/profileEdit.html
@@ -21,7 +21,7 @@
 					  		<li class="active" style="width:100%"><h3>Biografía</h3></li>
 					  </ul>
 					  <div id="input">
-						  <form action="../profile.php" method="post">
+						  <form enctype=multipart/form-data action="../profile.php" method="post">
 					  	<br/><br/>
 						<input type="text" class="form-control" name="userName" placeholder="Usuario" style="width:300px;height:40px;color:#646464;font-size:1.3em" required/>
 						<br/><br/>
@@ -34,17 +34,18 @@
 						<input type="radio" name="gender" value="Hombre"/>Hombre  <input type="radio" name="gender" value="mujer"> Mujer
 						<br/><br/>
 						Imagen de perfil <input type="file" name="profilePicture">
-							  <input type="hidden" name="size" value="640000">
-
+							  <input type="hidden" name="MAX_FILE_SIZE" value="300000" />
 						<br/><br/>
 						Imagen de portada <input type="file" name="coverPicture">
-							  <input type="hidden" name="size" value="640000">
+							  <input type="hidden" name="MAX_FILE_SIZE2" value="300000" />
 							  <br/><br/>
-							  <textarea placeholder="biography" name="biography"></textarea>
+
+							  <textarea name="bio"></textarea>
 							  <br/><br/>
 						<input class="btn btn-default" type="submit" id="entrar" name="Guardar" value="Guardar" />
 						<br/></br/><br/>
-							  </form>
+
+						  </form>
 					</div>
 				</div>
 			</div>
