try 1 de forgotpassword
no jala y no sé pro que

--- a/Osham/html/profileEdit.html
+++ b/Osham/html/profileEdit.html
@@ -36,8 +36,8 @@
 						Imagen de perfil <input type="file" name="profilePicture">
 							  <input type="hidden" name="MAX_FILE_SIZE" value="300000" />
 						<br/><br/>
-						Imagen de portada <input type="file" name="coverPicture">
-							  <input type="hidden" name="MAX_FILE_SIZE2" value="300000" />
+						Imagen de portada <input type="file" name="co">
+							  <input type="hidden" name="MAX_FILE_SIZE" value="300000" />
 							  <br/><br/>
 
 							  <textarea name="bio"></textarea>
