--- a/Osham/html/forgotPassword.html
+++ b/Osham/html/forgotPassword.html
@@ -21,11 +21,13 @@
 					  		<li class="active" style="width:100%"><h3>Reestablecer Contraseña</h3></li>
 					  </ul>
 					  <div id="input">
+						  <form action="../resetPassword.php" method="post">
 					  	<br/><br/>
 						<input type="text" class="form-control" name="user" placeholder="Correo" style="width:300px;height:40px;color:#646464;font-size:1.3em"/>
 						<br/><br/>
 						<input class="btn btn-default" type="submit" id="entrar" name="entrar" value="Enviar" />
 						<br/></br/><br/>
+							  </form>
 					</div>
 				</div>
 			</div>
