ya jala forgot password
cosas que faltan:
1. cover picture
2. desplegar biografia
3. mejorar diseño
4.checar mvc

--- a/Osham/html/forgotPassword.html
+++ b/Osham/html/forgotPassword.html
@@ -21,7 +21,7 @@
 					  		<li class="active" style="width:100%"><h3>Reestablecer Contraseña</h3></li>
 					  </ul>
 					  <div id="input">
-						  <form action="../resetPassword.php" method="post">
+						  <form action="../forgotPassword.php" method="post">
 					  	<br/><br/>
 						<input type="text" class="form-control" name="user" placeholder="Correo" style="width:300px;height:40px;color:#646464;font-size:1.3em"/>
 						<br/><br/>
